# nerve

./: .envrc  .gitignore  CHANNEL_HISTORY_PRD.md  DIR_STRUCTURE.md  Makefile  README.md  pyproject.toml
docs/: AGENT_CAPABILITIES.md  AGENT_REQUIREMENTS.md  ARCHITECTURE_EXPLORATION.md  DESIGN_ASSESSMENT.md  NODE_OUTPUT_SCHEMA.md  NODE_REFACTORING.md  SESSION_REFACTORING.md  prd-slash-prompts.md  refactoring-cli-node-module.md  tui-refactoring-plan.md  workflows.md
docs/bugs/: block-reference-timing-bugs.md
docs/design/: claude-wezterm-fork.md  node-fork-feature.md  suggestion-tracking.md
docs/prd/: engine-architectural-refactoring.md  mcp-integration.md  openai-provider-support.md  workflow-approach-a.md  workflow-system.md
docs/prds/: breaking-graph.md  breaking-terminal.md  expose-timeout-params-in-server-api.md  unified-node-creation-api.md
docs_for_agents/: coderabbit-review-guide.md
examples/: GRAPH_COMMANDER_TEST.md  bash_node_example.py  dag_chain_test.py  debate.py  demo_proxy.py  dev_coach.py  dev_coach_architecture.py  dev_coach_consultants.py  dev_coach_review.py  dev_coach_review_prd.py  explore_and_plan.py  graph_chain_test.py  implement_plan.py  number_loop.py  plan_review.py  refactor_for_plan.py  sample_dag.py  sample_graph.py  test_graph_in_commander.py  test_workspace.py  workspace_example.py
examples/agents/: __init__.py  debate.py
examples/core_only/: dag_execution.py  graph_execution.py  multi_session.py  simple_session.py  streaming.py
examples/embedded/: in_process.py
examples/remote/: client.py  server.py
examples/workflows/: __init__.py  basic_workflow.py  code_review_workflow.py  multi_step_demo.py  simple_loadable.py
examples/workspace/: driver_navigator.py
features/glm/: glm_chat_node.py  glm_node.py  tool_calling.py
features/openrouter/: openrouter_chat_node.py  openrouter_node.py  tool_calling.py
features/tools/: bash_tool_test.py  claude_tool_test.py
prompts/refactoring/: bug-hunter.md  verify-refactoring.md
scripts/: bump.py  run_anthropic_passthrough.py  run_openai_proxy.py
scripts/proxy/: browse_conversation.py  browse_file_operations.py  dump_request.py  summarize_session.py
src/nerve/: compose.py  (+2 more)
tests/: __init__.py  conftest.py
(+291 files in other folders)
